[Fix] Bug UI Scrollbar on MM share popup.

--- a/mm02ce/dunghd/popup/src/scripts/stylesheets/components/_all.scss
+++ b/mm02ce/dunghd/popup/src/scripts/stylesheets/components/_all.scss
@@ -139,8 +139,6 @@ $close-btn-img: url('./images/close_button.png');
 .popup-content {
   padding: 20px 15px;
   min-width: 340px;
-  max-height: 300px;
-  overflow-y: auto;
   text-align: center;
   .power-group {
     margin: 0 auto 10px;
